@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="iso-8859-1" ?>
 <otrs_config version="1.0" init="Framework">
-    <CVS>$Id: Framework.xml,v 1.326 2010-07-06 12:15:12 mg Exp $</CVS>
+    <CVS>$Id: Framework.xml,v 1.327 2010-07-06 13:28:23 mg Exp $</CVS>
     <ConfigItem Name="SecureMode" Required="1" Valid="1">
         <Description Translatable="1">Disables the web installer (http://yourhost.example.com/otrs/installer.pl), to prevent the system from being hijacked. If set to "No", the system can be reinstalled and the current basic configuration will be used to pre-populate the questions within the installer script. If not active, it also disables the GenericAgent, PackageManager and SQL Box (to avoid the use of destructive queries, such as DROP DATABASE, and also to steal user passwords).</Description>
         <Group>Framework</Group>
@@ -3846,18 +3846,6 @@ Your OTRS Notification Master
                 <Loader>
                     <JavaScript>Core.Agent.TicketAction.js</JavaScript>
                 </Loader>
-            </FrontendModuleReg>
-        </Setting>
-    </ConfigItem>
-    <ConfigItem Name="Frontend::Module###AgentLookup" Required="0" Valid="1">
-        <Description Translatable="1">Frontend module registration.</Description>
-        <Group>Framework</Group>
-        <SubGroup>Frontend::Agent::ModuleRegistration</SubGroup>
-        <Setting>
-            <FrontendModuleReg>
-                <Description>Data table lookup module.</Description>
-                <Title>Lookup</Title>
-                <NavBarName></NavBarName>
             </FrontendModuleReg>
         </Setting>
     </ConfigItem>
