@@ -1,65 +1,0 @@
-# --
-# AgentLookup.dtl - provides HTML form for AgentLookup
-# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
-# --
-# $Id: AgentLookup.dtl,v 1.12 2010-02-05 13:58:23 mn Exp $
-# --
-# This software comes with ABSOLUTELY NO WARRANTY. For details, see
-# the enclosed file COPYING for license information (AGPL). If you
-# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
-# --
-
-<!-- start Spelling form -->
-<script type="text/javascript">//<![CDATA[
-
-function updateMessage(x) {
-    if (parent.opener.closed) {
-        alert('$JSText{"The message being composed has been closed.  Exiting."}');
-        this.close();
-        return;
-    }
-
-    if (!parent.opener.document.compose) {
-        alert('$JSText{"This window must be called from compose window"}');
-        this.close();
-        return;
-    }
-
-    parent.opener.document.compose.$Data{"What"}.value = x
-    this.close();
-}
-
-//]]></script>
-
-<table border="0" width="100%" cellspacing="0" cellpadding="3">
-    <tr>
-        <td align="left" class="mainhead">
-            $Env{"Box0"}$Text{"Lookup"}$Env{"Box1"}
-        </td>
-    </tr>
-    <tr>
-        <td align="left" valign="top" class="mainbody">
-            <form action="$Env{"CGIHandle"}" method="post" enctype="multipart/form-data" name="lookup">
-                <input type="hidden" name="Action" value="$Env{"Action"}"/>
-                <input type="hidden" name="Source" value="$QData{"Source"}"/>
-                <input type="hidden" name="What"   value="$QData{"What"}"/>
-                <hr/>
-                <table border="0" cellspacing="0" cellpadding="1">
-                    <tr>
-                        <td>
-                            <input type="text" name="Search"    value="$QData{"Search"}" size="40"/>
-                            <button class="button" type="submit" value="$Text{"Search"}">$Text{"Search"}</button>
-                            <button class="button" type="reset"  value="$Text{"Reset"}">$Text{"Reset"}</button>
-                            <button class="button" type="button" onclick="window.close();" value="$Text{"Cancel"}">$Text{"Cancel"}</button>
-                        </td>
-                    </tr>
-                </table>
-                <table border="0" cellspacing="2" cellpadding="2">
-$Data{"Table"}
-                </table>
-            </form>
-            <hr/>
-        </td>
-    </tr>
-</table>
-<!-- end Spelling form -->
